Changed to using Google's CDN for jquery

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title= pageTitle(title)
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(type="text/javascript", src="/javascripts/jquery-1.4.4.min.js")
+    script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js")
   body
     #header
       #logo
