--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 !!!
 html
   head
-    title= pageTitle(title)
+    title= pageTitle(locals.title)
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js")
   body
