--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,27 +17,71 @@ input[type="password"]:focus,
 textarea:focus {
   border-color: #999;
 }
-.button {
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  padding: 5px;
-  cursor: pointer;
+.box-shadow {
+  -moz-box-shadow: 0 1px 0 #ececec;
+  -webkit-box-shadow: 0 1px 0 #ececec;
 }
 input[type="button"] {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
-  padding: 5px;
+  background: #e3e3e3;
+  background: -webkit-gradient(linear, center bottom, center top, from(#dbdbdb), to(#e3e3e3));
+  background: -moz-linear-gradient(90deg, #dbdbdb, #e3e3e3);
+  -moz-box-shadow: 0 1px 0 #ececec;
+  -webkit-box-shadow: 0 1px 0 #ececec;
+  padding: 8px;
   cursor: pointer;
+  border: 1px solid #d4d4d4;
+  margin: 0;
+  text-shadow: 1px 1px 0 rgba(40, 40, 40, 0.9);
+}
+input[type="button"]:hover {
+  background: #f4f4f4;
+  background: -webkit-gradient(linear, center bottom, center top, from(#ececec), to(#f4f4f4));
+  background: -moz-linear-gradient(90deg, #ececec, #f4f4f4);
+  border-color: #e5e5e5;
+}
+input[type="button"]:active {
+  margin-top: 1px;
+  margin-left: 1px;
+  margin-right: -1px;
+  margin-bottom: -1px;
+  background: #ececec;
+  background: -webkit-gradient(linear, center bottom, center top, from(#f4f4f4), to(#ececec));
+  background: -moz-linear-gradient(90deg, #f4f4f4, #ececec);
 }
 input[type="submit"] {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
-  padding: 5px;
+  background: #5e9ae2;
+  background: -webkit-gradient(linear, center bottom, center top, from(#3570b8), to(#5e9ae2));
+  background: -moz-linear-gradient(90deg, #3570b8, #5e9ae2);
+  -moz-box-shadow: 0 1px 0 #ececec;
+  -webkit-box-shadow: 0 1px 0 #ececec;
+  padding: 8px;
   cursor: pointer;
+  border: 1px solid #2e63a5;
+  margin: 0;
   font-weight: bold;
+  color: white;
+  text-shadow: 1px 1px 0 rgba(46, 99, 165, 0.9);
+}
+input[type="submit"]:hover {
+  background: #6ab2ff;
+  background: -webkit-gradient(linear, center bottom, center top, from(#4188dc), to(#6ab2ff));
+  background: -moz-linear-gradient(90deg, #4188dc, #6ab2ff);
+  border-color: #3a7bc9;
+}
+input[type="submit"]:active {
+  margin-top: 1px;
+  margin-left: 1px;
+  margin-right: -1px;
+  margin-bottom: -1px;
+  background: #4188dc;
+  background: -webkit-gradient(linear, center bottom, center top, from(#6ab2ff), to(#4188dc));
+  background: -moz-linear-gradient(90deg, #6ab2ff, #4188dc);
 }
 #register-form {
   width: 100%;
@@ -57,7 +101,6 @@ input[type="submit"] {
 }
 #register-error {
   width: 300px;
-  margin: 0 auto;
   border: 1px solid red;
   background: #f99;
   color: #600;
