--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,24 @@
-h1= title
-p Welcome to #{title}
+
+form(method="POST", action="/login?returnto=/")
+  table#login-form
+    - if (locals.error)
+      tr
+        th
+        td
+          #login-error!= msg('error-' + error)
+    tr
+      th
+        label(for="login-username")= msg('Username')
+      td
+        input(type="text", id="login-username", name="username", value=locals.userinfo ? userinfo.username : '')
+    tr
+      th
+        label(for="login-password")= msg('Password')
+      td
+        input(type="password", id="login-password", name="password", value=locals.userinfo ? userinfo.password : '')
+    tr
+      th
+      td
+        input(type="submit", id="login-submit", value=msg('Login'))
+        a.button(href="/register", id="login-register")= msg('Register')
+
