--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -1,3 +1,3 @@
 h1!= msg('welcome', userinfo.username)
-a.button(href="/logout")= msg('Logout')
+a.button(href="/logout", id="logout")= msg('Logout')
 
