Editinfo support added. One thing at a time!

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -74,8 +74,8 @@ input[type="submit"] {
   font-weight: bold; color: white; text-shadow: 1px 1px 0 rgba(46,99,165,0.9);
 }
 
-// Register & Login
-#register-form, #login-form {
+// Register, Login & EditInfo
+#register-form, #login-form, #editinfo-form {
   width: 100%;
   th {
     text-align: right; width: 50%;
@@ -83,7 +83,7 @@ input[type="submit"] {
   }
 }
 #register-form { th, td { vertical-align: top; } }
-#register-error, #login-error {
+#register-error, #login-error, #editinfo-error {
   width: 300px; border: 1px solid red; color: #600; padding: 5px;
   .gradient-top-down(#f99, #f66);
 }
