--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -74,16 +74,16 @@ input[type="submit"] {
   font-weight: bold; color: white; text-shadow: 1px 1px 0 rgba(46,99,165,0.9);
 }
 
-// Register, Login & EditInfo
-#register-form, #login-form, #editinfo-form {
+// Register, Login, EditInfo & AppReg
+#register-form, #login-form, #editinfo-form, #appreg-form {
   width: 100%;
   th {
     text-align: right; width: 50%;
     .tip { display: none; color: #333; font-weight: normal; }
   }
 }
-#register-form { th, td { vertical-align: top; } }
-#register-error, #login-error, #editinfo-error {
+#register-form, #appreg-form { th, td { vertical-align: top; } }
+#register-error, #login-error, #editinfo-error, #appreg-error {
   width: 300px; border: 1px solid red; color: #600; padding: 5px;
   .gradient-top-down(#f99, #f66);
 }
