--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -37,6 +37,10 @@ input[type="text"], input[type="password"], textarea {
 @blue-grad-end:   #3570b8;
 @blue-border:     #2e63a5;
 @blue-hover-aug:  #0c1824;
+@red-grad-start:  #dc5f59;
+@red-grad-end:    #b33630;
+@red-border:      #cd504a;
+@red-hover-aug:   #0f0505;
 .gradient-top-down (@start, @end) {
   background: @start;
   background: -webkit-gradient(linear,center bottom,center top,from(@end),to(@start));
@@ -69,9 +73,13 @@ input[type="button"], a.button {
   .button(@gray-grad-start, @gray-grad-end, @gray-border, @gray-hover-aug);
   text-shadow: 1px 1px 0 rgba(180,180,180,0.9);
 }
-input[type="submit"] {
+input[type="submit"], a.default-button {
   .button(@blue-grad-start, @blue-grad-end, @blue-border, @blue-hover-aug);
   font-weight: bold; color: white; text-shadow: 1px 1px 0 rgba(46,99,165,0.9);
+}
+a.warning-button {
+  .button(@red-grad-start, @red-grad-end, @red-border, @red-hover-aug);
+  font-weight: bold; color: white; text-shadow: 1px 1px 0 rgba(162,43,47,0.9);
 }
 
 // Register, Login, EditInfo & AppReg
@@ -96,7 +104,11 @@ input[type="submit"] {
 #section-apps { float: right; }
 .section h2 { font-size: 120%; border-bottom: 1px dotted #666; margin: 1ex -1em; }
 
-#userinfo-table { width: 100%; th { text-align: right; vertical-align: top; } }
+#userinfo-table, #appinfo-table {
+  width: 100%; border-collapse: collapse;
+  th { text-align: right; vertical-align: top; border-right: 1px dotted #666; }
+  th, td { padding: 0.5ex; }
+}
 
-#app-list { li { display: block; } }
+#app-list, #owners-list { margin: 0; padding: 0; li { display: block; padding: 1ex; &:hover { background: #eef7ff; } } }
 
