Utilizing flash notifications

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -82,6 +82,11 @@ a.warning-button {
   font-weight: bold; color: white; text-shadow: 1px 1px 0 rgba(162,43,47,0.9);
 }
 
+// Flashes
+.flash { margin: 1ex 3em; border-width: 1px 0px; border-style: solid none; padding: 1ex 3ex; }
+.error-flash { border-color: #f33; color: #600; .gradient-top-down(#fbb, #ff9b9b); }
+.info-flash { border-color: #59d; color: #126; .gradient-top-down(#def, #bdf); }
+
 // Register, Login, EditInfo & AppReg
 #register-form, #login-form, #editinfo-form, #appreg-form {
   width: 100%;
