--- a/views/appreg.jade
+++ b/views/appreg.jade
@@ -1,5 +1,5 @@
 form(method="POST", action="/appreg")
-  table#appreg-form
+  table.form-table
     tr
       th
         label(for="appreg-name")= msg('app-name')
