--- a/views/editinfo.jade
+++ b/views/editinfo.jade
@@ -1,5 +1,5 @@
 form(method="POST", action="/editinfo")
-  table#editinfo-form
+  table.form-table
     tr
       th= msg('Username')
       td= userinfo.username
