--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 form(method="POST", action="/login?returnto=/")
-  table#login-form
+  table.form-table
     tr
       th
         label(for="login-username")= msg('Username')
