--- a/views/register.jade
+++ b/views/register.jade
@@ -1,5 +1,5 @@
 form(method="POST", action="/register")
-  table#register-form
+  table.form-table
     tr
       th
         label(for="reg-username")= msg('Username')
