--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -9,7 +9,7 @@ a {
 }
 input, textarea { font: inherit; }
 
-@input-padding: 5px;
+@input-padding: 0.75ex;
 input[type="text"], input[type="password"], textarea {
   padding: @input-padding; border: 1px solid #ccc;
   &:hover, &:focus { border-color: #999; }
@@ -87,18 +87,15 @@ a.warning-button {
 .error-flash { border-color: #f33; color: #600; .gradient-top-down(#fbb, #ff9b9b); }
 .info-flash { border-color: #59d; color: #126; .gradient-top-down(#def, #bdf); }
 
-// Register, Login, EditInfo & AppReg
-#register-form, #login-form, #editinfo-form, #appreg-form {
+// Form table, Info table
+.form-table, .info-table {
   width: 100%;
-  th {
-    text-align: right; width: 50%;
-    .tip { display: none; color: #333; font-weight: normal; }
-  }
+  th, td { vertical-align: top; }
+  th { text-align: right; padding-right: 1em; }
 }
-#register-form, #appreg-form { th, td { vertical-align: top; } }
-#register-error, #login-error, #editinfo-error, #appreg-error {
-  width: 300px; border: 1px solid red; color: #600; padding: 5px;
-  .gradient-top-down(#f99, #f66);
+.form-table th {
+  width: 50%;
+  .tip { display: none; color: #555; font-weight: normal; }
 }
 
 // Dashboard
@@ -109,11 +106,5 @@ a.warning-button {
 #section-apps { float: right; }
 .section h2 { font-size: 120%; border-bottom: 1px dotted #666; margin: 1ex -1em; }
 
-#userinfo-table, #appinfo-table {
-  width: 100%; border-collapse: collapse;
-  th { text-align: right; vertical-align: top; border-right: 1px dotted #666; }
-  th, td { padding: 0.5ex; }
-}
-
-#app-list, #owners-list { margin: 0; padding: 0; li { display: block; padding: 1ex; &:hover { background: #eef7ff; } } }
+.operable-list { margin: 0; padding: 0; li { display: block; padding: 0.5ex 1ex; &:hover { background: #eef7ff; } } }
 
