--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -66,22 +66,28 @@ input[type="text"], input[type="password"], textarea {
   }
 }
 a.button, a.button:visited { text-decoration: none; }
-input[type="button"], a.button {
+input[type="button"], a.button, input.button {
   .button(@gray-grad-start, @gray-grad-end, @gray-border, @gray-hover-aug);
   color: black; text-shadow: 1px 1px 0 rgba(180,180,180,0.9);
 }
-input[type="submit"], a.default-button {
+input[type="submit"], a.default-button, input.default-button {
   .button(@blue-grad-start, @blue-grad-end, @blue-border, @blue-hover-aug);
   font-weight: bold; color: white; text-shadow: 1px 1px 0 rgba(46,99,165,0.9);
 }
-a.warning-button {
+a.warning-button, input.warning-button {
   .button(@red-grad-start, @red-grad-end, @red-border, @red-hover-aug);
   font-weight: bold; color: white; text-shadow: 1px 1px 0 rgba(162,43,47,0.9);
 }
 
 // Flashes
-.flash { margin: 1ex 3em; border-width: 1px 0px; border-style: solid none; padding: 1ex 3ex; }
-.error-flash { border-color: #f33; color: #600; .gradient-top-down(#fbb, #ff9b9b); }
+.flash, .block-flash { border-width: 1px 0px; border-style: solid none; }
+.flash { margin: 1ex 3em; padding: 1ex 3ex; }
+.block-flash {
+  width: 60%; margin: 1ex auto; padding: 1.5ex 2em;
+  .message { margin: .5ex; }
+  .choices { text-align: center; margin-top: 1em; }
+}
+.error-flash, .danger-flash { border-color: #f33; color: #600; .gradient-top-down(#fbb, #ff9b9b); }
 .info-flash { border-color: #59d; color: #126; .gradient-top-down(#def, #bdf); }
 
 // Form table, Info table
