a small part of oauth, suspended until namespace refactoring complete

--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,6 @@
-form(method="POST", action="/login?returnto=/")
+form(method="POST", action="/login")
+  - if (locals.returnto)
+    input(type="hidden", name="returnto", value=returnto)
   table.form-table
     tr
       th
