--- a/views/appauth.jade
+++ b/views/appauth.jade
@@ -1,4 +1,4 @@
-form(method="POST", action="/api/authorize")
+form(method="POST", action="/api/authorize?client_id=" + appinfo.clientid)
   .flash.block-flash.info-flash
     div.message!= msg('app-auth-message', appinfo.clientid, appinfo.name)
     div.choices
