--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,8 +1,33 @@
+// Mixins & Classes
+.clear { clear: both; }
+
+.rounded-corners (@radius: 5px) {
+  -moz-border-radius: @radius;
+  -webkit-border-radius: @radius;
+  border-radius: @radius;
+}
+.box-shadow (@spec) {
+  -moz-box-shadow: @spec;
+  -webkit-box-shadow: @spec;
+  box-shadow: @spec;
+}
+.gradient-top-down (@start, @end) {
+  background: @start;
+  background: -webkit-gradient(linear,center bottom,center top,from(@end),to(@start));
+  background: -moz-linear-gradient(90deg,@end,@start);
+}
+
 // Layout
-body { padding: 50px; font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+html, body { margin: 0; padding: 0; min-height: 100%; }
+body { font: 14px "Lucida Grande", Helvetica, sans-serif; background: #ccc; }
+#container { padding: 20px; width: 760px; /* 800px - 20px * 2 */ margin: 50px auto; .rounded-corners;
+  background: white; .box-shadow(0 0 40px 5px #b2b2b2); }
+#logo { display: block; background: url('../images/logo200.png'); width: 200px; height: 150px; }
+#menu { float: right; padding: 0; margin: 20px;
+  .item { text-align: right; display: block; line-height: 3ex; }
+}
 
 // Common
-.clear { clear: both; }
 a {
   &:link, &:visited { color: #37d; text-decoration: none; }
   &:hover, &:active { color: #59f; text-decoration: underline; }
@@ -13,16 +38,6 @@ input, textarea { font: inherit; }
 input[type="text"], input[type="password"], textarea {
   padding: @input-padding; border: 1px solid #ccc;
   &:hover, &:focus { border-color: #999; }
-}
-
-.rounded-corners (@radius: 5px) {
-  -moz-border-radius: @radius;
-  -webkit-border-radius: @radius;
-  border-radius: @radius;
-}
-.box-shadow {
-  -moz-box-shadow: 0 1px 0 #ececec;
-  -webkit-box-shadow: 0 1px 0 #ececec;
 }
 
 @button-padding: 1ex;
@@ -39,18 +54,13 @@ input[type="text"], input[type="password"], textarea {
 @red-grad-end:    #c23b35;
 @red-border:      #cd504a;
 @red-hover-aug:   #0f0505;
-.gradient-top-down (@start, @end) {
-  background: @start;
-  background: -webkit-gradient(linear,center bottom,center top,from(@end),to(@start));
-  background: -moz-linear-gradient(90deg,@end,@start);
-}
 .button (@grad-start: @gray-grad-start,
          @grad-end:   @gray-grad-end,
          @border:     @gray-border,
          @hover-aug:  @gray-hover-aug) {
   .rounded-corners;
   .gradient-top-down(@grad-start, @grad-end);
-  .box-shadow;
+  .box-shadow(0 1px 0 #ececec);
   margin: .5ex 1ex;
   display: inline-block;
   padding: @button-padding @button-padding * 1.5;
@@ -112,4 +122,6 @@ a.warning-button, input.warning-button {
 .section h2 { font-size: 120%; border-bottom: 1px dotted #666; margin: 1ex -1em; }
 
 .operable-list { margin: 0; padding: 0; li { display: block; padding: 0.5ex 1ex; &:hover { background: #eef7ff; } } }
+
+// vim: set ts=2 sw=2:
 
