--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -19,13 +19,13 @@
 
 // Layout
 html, body { margin: 0; padding: 0; min-height: 100%; }
-body { font: 14px "Lucida Grande", Helvetica, sans-serif; background: #ccc; }
+body { font: 14px "Lucida Grande", Helvetica, sans-serif; background: #cdf; }
 #container { width: 800px; margin: 20px auto; }
 #logo { display: block; background: url('../images/logo200.png'); width: 200px; height: 150px; }
 #menu { float: right; padding: 0; margin: 20px;
   .item { text-align: right; display: block; line-height: 3ex; }
 }
-#content { padding: 20px; .rounded-corners; background: white; .box-shadow(0 0 40px 5px #b2b2b2); }
+#content { padding: 20px; .rounded-corners; background: white; .box-shadow(0 0 40px 5px #b2cfff); }
 
 // Common
 a {
