--- a/views/editinfo.jade
+++ b/views/editinfo.jade
@@ -2,17 +2,68 @@ form(method="POST", action="/editinfo")
   table.form-table
     tr
       th= msg('Username')
-      td= userinfo.username
+      td
+        = userinfo.username
+        a(href="/changeusername")= msg('change')
+    tr
+      th
+        label(for="editinfo-nickname")= msg('Nickname')
+        .tip#editinfo-nickname-tips!= msg('nickname-tips')
+      td
+        input#editinfo-nickname(type="text", name="nickname", value=userinfo.nickname)
     tr
       th
         label(for="editinfo-old-password")= msg('old-password')
+        .tip#editinfo-old-password-tips!= msg('change-password-tips')
       td
-        input(type="password", id="editinfo-old-password", name="oldpass", value=userinfo.oldpass || '')
+        input#editinfo-old-password(type="password", name="oldpass", value=userinfo.oldpass || '')
     tr
       th
         label(for="editinfo-new-password")= msg('new-password')
+        .tip#editinfo-new-password-tips!= msg('change-password-tips')
       td
-        input(type="password", id="editinfo-new-password", name="newpass", value=userinfo.newpass || '')
+        input#editinfo-new-password(type="password", name="newpass", value=userinfo.newpass || '')
+    tr
+      th
+        label(for="editinfo-surname")= msg('Surname')
+      td
+        input#editinfo-surname(type="text", name="surname", value=userinfo.surname)
+    tr
+      th
+        label(for="editinfo-givenname")= msg('given-name')
+      td
+        input#editinfo-givenname(type="text", name="givenname", value=userinfo.givenname)
+    tr
+      th
+        label(for="editinfo-fullname")= msg('full-name')
+      td
+        select#editinfo-fullname(name="fullname")
+          - var surgiven = userinfo.surname + userinfo.givenname
+          option#ei-fn-surgiven(value="surgiven", selected: userinfo.fullname === surgiven)= surgiven
+          - var given_sur = userinfo.givenname + " " + userinfo.surname
+          option#ei-fn-given-sur(value="given-sur", selected: userinfo.fullname === given_sur)= given_sur
+          - var sur_given = userinfo.surname + " " + userinfo.givenname
+          option#ei-fn-sur-given(value="sur-given", selected: userinfo.fullname === sur_given)= sur_given
+    tr
+      th
+        label(for="editinfo-email")= msg('Email')
+      td
+        input#editinfo-email(type="email", name="email", value=userinfo.email)
+    tr
+      th
+        label(for="editinfo-mobile")= msg('Mobile')
+      td
+        input#editinfo-mobile(type="tel", name="mobile", value=userinfo.mobile)
+    tr
+      th
+        label(for="editinfo-website")= msg('Website')
+      td
+        input#editinfo-mobile(type="text", name="website", value=userinfo.website)
+    tr
+      th
+        label(for="editinfo-address")= msg('Address')
+      td
+        input#editinfo-address(type="text", name="address", value=userinfo.address)
     tr
       th
         label(for="editinfo-bio")= msg('Bio')
@@ -22,4 +73,5 @@ form(method="POST", action="/editinfo")
       th
       td
         input(type="submit", id="editinfo-submit", value=msg('Submit'))
+        a.button(href="/")= msg('Cancel')
 
