--- a/views/register.jade
+++ b/views/register.jade
@@ -1,22 +1,25 @@
 form(method="POST", action="/register")
   table.form-table
     tr
+      td(colspan="2") msg('register-info')
+    tr
       th
         label(for="reg-username")= msg('Username')
         .tip#reg-username-tips!= msg('reg-username-tips')
       td
-        input(type="text", id="reg-username", name="username", value=locals.userinfo ? userinfo.username : '')
+        input#reg-username(type="text", name="username", value=locals.userinfo ? userinfo.username : '')
     tr
       th
         label(for="reg-password")= msg('Password')
         .tip#reg-password-tips!= msg('reg-password-tips')
       td
-        input(type="password", id="reg-password", name="password", value=locals.userinfo ? userinfo.password : '')
+        input#reg-password(type="password", name="password", value=locals.userinfo ? userinfo.password : '')
     tr
       th
-        label(for="reg-bio")= msg('Bio')
+        label(for="reg-email")= msg('Email')
+        .tip#reg-password-tips!= msg('reg-email-tips')
       td
-        textarea(id="reg-bio", name="bio")= locals.userinfo ? userinfo.bio : ''
+        input#reg-email(type="email", name="email", value=locals.userinfo ? userinfo.email : '')
     tr
       th
       td
