--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -35,7 +35,7 @@ a {
 input, textarea { font: inherit; }
 
 @input-padding: 0.75ex;
-input[type="text"], input[type="password"], textarea {
+input[type="text"], input[type="password"], input[type="email"], input[type="tel"], textarea {
   padding: @input-padding; border: 1px solid #ccc;
   &:hover, &:focus { border-color: #999; }
 }
