--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -20,12 +20,14 @@
 // Layout
 html, body { margin: 0; padding: 0; min-height: 100%; }
 body { font: 14px "Lucida Grande", Helvetica, sans-serif; background: #cdf; }
+img { border: 0; }
+#header { position: relative; }
 #container { width: 800px; margin: 20px auto; }
-#logo { display: block; background: url('../images/logo200.png'); width: 200px; height: 150px; }
-#menu { float: right; padding: 0; margin: 20px;
-  .item { text-align: right; display: block; line-height: 3ex; }
-}
+#logo { display: block; width: 410px; height: 150px; }
+#menu { margin: 10px; position: absolute; right: 0; bottom: 0; }
 #content { padding: 20px; .rounded-corners; background: white; .box-shadow(0 0 40px 5px #b2cfff); }
+#footer { text-align: center; color: #666e80; text-shadow: 0 1px 0 white; margin: 1em 0 0 0; font-size: 90%; }
+#footer p { margin: .8ex 0 0 0; }
 
 // Common
 a {
@@ -114,8 +116,6 @@ a.warning-button, input.warning-button {
 }
 
 // Dashboard
-#logout { float: right; }
-
 .section { width: 41%; margin: 1ex 3%; padding: 1ex 1%; }
 #section-userinfo { float: left; }
 #section-apps { float: right; }
