--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -30,6 +30,7 @@ img { border: 0; }
 #footer p { margin: .8ex 0 0 0; }
 
 // Common
+.hidden { display: none; }
 a {
   &:link, &:visited { color: #37d; text-decoration: none; }
   &:hover, &:active { color: #59f; text-decoration: underline; }
