Basic registration for testing

--- a/views/register.jade
+++ b/views/register.jade
@@ -24,4 +24,6 @@ form(method="POST", action="/register")
       th
       td
         input(type="submit", id="reg-submit", value=msg('Submit'))
+        a.button(href="/")= msg('Cancel')
+
 
