objectClass=posixAccount for new users

--- a/views/appreg.jade
+++ b/views/appreg.jade
@@ -22,5 +22,5 @@ form(method="POST", action="/appreg")
       th
       td
         input(type="submit", id="appreg-submit", value=msg('Submit'))
-
+        a.button(href="/")= msg('Cancel')
 
