--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -21,7 +21,7 @@
 html, body { margin: 0; padding: 0; min-height: 100%; }
 body { font: 14px "Lucida Grande", Helvetica, sans-serif; background: #cdf; }
 img { border: 0; }
-h1 { letter-spacing: -1px; border-bottom: 2px dashed #B2CFFF; margin: 10px -20px; padding: 0 20px 10px 20px; }
+h1 { letter-spacing: -1px; border-bottom: 2px dashed #B2CFFF; margin: 10px -20px; padding: 0 20px 10px 20px; color: #2B65AE; text-shadow: 0px 1px 1px #DDE; }
 #header { position: relative; }
 #container { width: 800px; margin: 20px auto; }
 #logo { display: block; width: 410px; height: 150px; }
