fix some bugs of template (by npbool)

--- a/views/apppage.jade
+++ b/views/apppage.jade
@@ -8,7 +8,7 @@ table.info-table
   tr
     th= msg('app-owners')
     td
-      ul.operable-list!= partial('appowner', appinfo.owners)
+      ul.operable-list!= partial('partials/appowner', appinfo.owners)
   tr
     th
     td
