--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -19,14 +19,14 @@
 
 // Layout
 html, body { margin: 0; padding: 0; min-height: 100%; }
-body { font: 14px "Lucida Grande", Helvetica, sans-serif; background: #cdf; }
+body { font: 14px "Lucida Grande", Helvetica, sans-serif; background: #def; }
 img { border: 0; }
 h1 { letter-spacing: -1px; border-bottom: 2px dashed #B2CFFF; margin: 10px -20px; padding: 0 20px 10px 20px; color: #2B65AE; text-shadow: 0px 1px 1px #DDE; }
 #header { position: relative; }
 #container { width: 800px; margin: 20px auto; }
-#logo { display: block; width: 410px; height: 150px; }
+#logo { display: block; width: 510px; height: 150px; }
 #menu { margin: 10px; position: absolute; right: 0; bottom: 0; }
-#content { padding: 20px; .rounded-corners; background: white; .box-shadow(0 0 40px 5px #b2cfff); }
+#content { padding: 20px; .rounded-corners; background: white; .box-shadow(0 0 40px 5px #b2e3fa); }
 #footer { text-align: center; color: #666e80; text-shadow: 0 1px 0 white; margin: 1em 0 0 0; font-size: 90%; }
 #footer p { margin: .8ex 0 0 0; }
 
