--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,7 @@ html
             != msg('logged-in-as', session.userinfo.username)
             a#logout(href="/logout")= msg('Logout')
         a#logo(href="/")
-          img(src="/images/net9.svg", width="130", height="130")
+          img(src="/images/net9.gif", width="130", height="130")
           img(src="/images/accounts.svg", width="300", height="100")
       #content
         h1= title
