test version of authorized apps

--- a/views/apppage.jade
+++ b/views/apppage.jade
@@ -3,6 +3,9 @@ table.info-table
     th= msg('client-id')
     td= appinfo.clientid
   tr
+    th= msg('client-secret')
+    td= appinfo.secret
+  tr
     th= msg('app-desc')
     td= appinfo.desc
   tr
