--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -39,7 +39,7 @@
       td
         a.button(href="/editinfo")= msg('edit-my-info')
 .section#section-apps
-  h2= msg('my-apps')
+  h2= msg('apps')
   - if (apps.success)
     - if (apps.apps.length)
       ul.operable-list!= partial('partials/appitem', apps.apps)
@@ -48,4 +48,12 @@
   - else
     div= msg('error-retrieving-apps')
   a.button(href="/appreg")= msg('register-new-app')
-
+  h2= msg('authorized-apps')
+  - if (apps.success)
+    - if (apps.authorizedapps.length)
+      ul.operable-list!= partial('partials/appitem', apps.authorizedapps)
+    - else
+      div= msg('no-apps-yet')
+  - else
+    div= msg('error-retrieving-apps')
+  
